# gso

./: .gitignore  .gitmodules  README.md  analyze.ipynb  pyproject.toml
.github/workflows/: publish.yml
app/: app.py  commits.py  probs.py  utils.py
app/static/: styles.css
app/submissions/: app.py
app/submissions/templates/: base.html  conversation.html  index.html
app/templates/: base.html  commits.html
conf/: ds.yaml  pyd.yaml  tn.yaml
experiments/: compare_benchmarks.py
experiments/backtranslate/: plot_backtranslate.py  prepare.sh  prepare_dataset.py  sample.sh  sample_plans.py
experiments/figures/: plots.ipynb
experiments/qualitative/: analysis.ipynb  gt_analysis.ipynb  traj_analysis.ipynb  trajectory_analysis.csv
experiments/quantitative/: analysis.ipynb  plots.ipynb
exps/: bul.yaml  ds.yaml  mpi.yaml  np.yaml  nx.yaml  pd.yaml  pil.yaml  tk.yaml
src/gso/: constants.py
src/gso/collect/: README.md  build_dataset.py
src/gso/data/: dataset.py  problem.py
src/gso/harness/: README.md  opt_at_k.py  prepare_images.py  run_evaluation.py
src/gso/utils/: io.py
src/pyperf/: __init__.py  analyze_diff.py  config.yml  constants.py  context.py  logger.py  prepare_pr.py  runtest.py  setup.sh  templates.py  utils.py
src/pyperf/analysis/: README.md  apis.py  commits.py  models.py  parse_diff.py  parser.py  prompt.py  retriever.py  utils.py
src/pyperf/collect/: README.md  build_dataset.py  pids.py  utils.py
src/pyperf/data/: __init__.py  commit.py  dataset.py  entities.py  parsing.py  perf.py  perfcommit.py  problem.py  repo.py
src/pyperf/execute/: args.py  evaluate.py  exec.py  execute.py  harness.py  helpers.py  input.json  phase1.txt  phase2.txt  run.py  runtest.py  service.py  skygen.py  skymgr.py  temp.py  template.yaml  utils.py
src/pyperf/generate/: args.py  context.py  exp.yaml  generate.py  gentest.py  harness.py  helpers.py  oversample.py  prompt.py  quickcheck.py  (+3 more)
(+99 files in other folders)
