[project]
name = "pyperf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.8.0",
    "pygithub>=2.4.0",
    "r2e-test-server>=0.1.4",
    "r2e>=0.1.0",
    "memory-profiler>=0.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
r2e = { path = "src/r2e" }
