[project]
name = "gso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.8.0",
    "pygithub>=2.4.0",
    "r2e-test-server>=0.1.4",
    "r2e>=0.1.0",
    "memory-profiler>=0.61.0",
    "fire>=0.6.0",
    "flask>=3.0.3",
    "pip>=24.2",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.1",
    "seaborn>=0.13.2",
    "line-profiler>=4.1.3",
    "ghapi>=1.0.6",
    "skypilot>=0.5.0",
    "scipy>=1.14.1",
    "google>=3.0.0",
    "datasets>=3.2.0",
    "huggingface-hub>=0.27.0",
    "docker>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
r2e = { git = "https://github.com/r2e-project/r2e" }
